<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".controller.Login"
    android:theme="@android:style/Theme.NoTitleBar"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGreen"
        android:padding="5dp">
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ProgressBar
                android:id="@+id/progressBar_cyclic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:visibility="gone"
                android:minWidth="50dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/llParentLayout">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_height"
                    android:layout_marginTop="5dp"
                    android:id="@+id/etDate"
                    android:focusable="false"
                    style="@style/text_style"
                    android:hint="@string/hintDate"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_height"
                    android:id="@+id/etReason"
                    style="@style/text_style"
                    android:hint="@string/hintReason"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_height"
                    android:background="@drawable/customborder"
                    android:id="@+id/btnLeaveRequest"
                    style="@style/text_style"
                    android:layout_marginTop="5dp"
                    android:text="@string/btnLeaveRequest"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>