<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"

            android:id="@+id/llFirst">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/llOrderBooking">
                <LinearLayout
                    android:layout_width="200dp"
                    android:background="@drawable/custom_button"
                    android:padding="@dimen/padding_10"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imgOrderBooking"

                        android:src="@drawable/order_bus"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hintOrderBooking"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_10"
                        style="@style/medium_text_style"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:id="@+id/llSync"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="200dp"
                    android:background="@drawable/custom_button"
                    android:elevation="10dp"
                    android:padding="@dimen/padding_10"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imgSync"
                        android:src="@drawable/img_sync"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hintPerformSync"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_10"
                        style="@style/medium_text_style"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/llBasket">
                <LinearLayout
                    android:layout_width="200dp"
                    android:background="@drawable/custom_button"
                    android:padding="@dimen/padding_10"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imgOrder"
                        android:src="@drawable/order_basket"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hintOrderBasket"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_10"
                        style="@style/medium_text_style"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/llProfile">
                <LinearLayout
                    android:layout_width="200dp"
                    android:background="@drawable/custom_button"
                    android:padding="@dimen/padding_10"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imgProfile"
                        android:src="@drawable/male_profile"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hintAddCustomer"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_10"
                        style="@style/medium_text_style"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/llLeaveRequest">
                <LinearLayout
                    android:layout_width="200dp"
                    android:background="@drawable/custom_button"
                    android:padding="@dimen/padding_10"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imgLeaveRequest"
                        android:src="@drawable/leave_request"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hintLeaveRequest"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_10"
                        style="@style/medium_text_style"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/llDashboard">
                <LinearLayout
                    android:layout_width="200dp"
                    android:background="@drawable/custom_button"
                    android:padding="@dimen/padding_10"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imgDashboard"
                        android:src="@drawable/dashboard"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hintDashboard"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_10"
                        style="@style/medium_text_style"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/llNotification">
                <LinearLayout
                    android:layout_width="200dp"
                    android:background="@drawable/custom_button"
                    android:padding="@dimen/padding_10"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imgNotification"
                        android:src="@drawable/img_notification"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hintNotification"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_10"
                        style="@style/medium_text_style"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/llEmpty">
                <LinearLayout
                    android:layout_width="200dp"
                    android:padding="@dimen/padding_10"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imgEmpty"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_10"
                        style="@style/medium_text_style"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>